# CLAIMS

./: .gitignore  Client.cpp  Config.cpp  Config.h  Environment.cpp  Environment.h  Makefile.am  README.md  Server.cpp  configure.ac  memlog  test.sh  test_all.sh
Catalog/: Attribute.h  table.cpp
IndexManager/: CSBIndexBuilding.cpp  IndexManager.cpp  IndexScanIterator.h  LogicalCSBIndexBuilding.cpp
Loader/: Hdfsloader.cpp
Parsetree/: ExecuteLogicalQueryPlan.cpp  ExecuteLogicalQueryPlan.h
Resource/: ResourceManagerSlave.cpp
Test/: block_stream_iterator_serilaization_test.cpp  block_stream_test.cpp  gtest_main.cpp
catalog/: catalog.cpp  catalog.h  partitioner.cpp  partitioner.h  projection.cpp  projection_binding.cpp
codegen/: codegen_test.h  generating_expr.cpp
common/: AttributeComparator.cpp  AttributeComparator.h  Comparator.cpp  Comparator.h  ExpressionCalculator.cpp  ExpressionCalculator.h  Expression_item.cpp  Makefile.am  TypeCast.h  data_type.cpp  data_type.h  error_define.h  error_no.cpp
common/Network/: Broker.cpp  Broker.h  Buffering.cpp  Buffering.h  Epoller.cpp  Epoller.h  Makefile.am  Network.cpp  Network.h  Selector.cpp  Selector.h  network_test.cpp
conf/: config
loader/: AMQ_consumer.cpp  Makefile.am  SimpleProducer  data_ingestion.cpp  load_packet.h  master_loader.cpp  master_loader.h  master_loader_broker.cpp  master_loader_broker.h  producer  slave_loader.cpp  slave_loader.h  slave_loader_broker.cpp  slave_loader_broker.h
logical_operator/: logical_aggregation.cpp  logical_aggregation.h  logical_cross_join.cpp  logical_cross_join.h  (+21 more)
(+92 files in other folders)
